[package]
name = "reach_web_service"
version = "0.1.0"
authors = ["Scott Lott <Scott.Lott@UrbanConsults.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
num_cpus = "1.13.0"
warp = "0.2.2"
futures = "0.3.5"
async-recursion = "0.3.1"
crossbeam = "0.7.3"
hyper = "0.13.5"
lazy_static = "1.4.0"
quick-js = { path = "../quickjs-rs" }
reqwest = "0.10.4"
http = "0.2.1"
actix-web = "2.0.0"
actix-rt = "1.1.1"
actix-http = "1.0.1"
deno_core = { path = "../deno/core" }
deno = { path = "../deno/cli" }